<resources>
    <string name="app_name">TekDroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="My_Profile">Profile</string>
    <string name="planning">Planning</string>
    <string name="Search_by_Login">Search by Login</string>
    <string name="Trombi">Trombi</string>
    <string name="Last_Messages">Messages</string>

    <string name="EpitechAPI">https://epitech-api.herokuapp.com/</string>
    <!-- LOGIN & GENERAL -->
    <string name="loginAPI">https://epitech-api.herokuapp.com/login</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="token">token</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="relayUserLogin">userLogin</string>
    <string name="relaySessionToken">sessionToken</string>
    <!-- /LOGIN & GENERAL -->


    <!-- TROMBI-->
    <string name="trombiAPI">https://epitech-api.herokuapp.com/trombi</string>
    <string name="studentList">items</string>
    <string name="year">year</string>
    <string name="location">location</string>
    <string name="promotion">promo</string>
    <string name="semester">semester</string>
    <string name="yearChoice">Year</string>

    <string-array name="trombi_locations">
        <item>FR/BDX</item>
        <item>FR/LIL</item>
        <item>FR/LYN</item>
        <item>FR/MAR</item>
        <item>FR/MPL</item>
        <item>FR/NCY</item>
        <item>FR/NAN</item>
        <item>FR/NCE</item>
        <item>FR/PAR</item>
        <item>FR/REN</item>
        <item>FR/STG</item>
        <item>FR/TLS</item>
    </string-array>

    <string-array name="trombi_promos">
        <item>tek1</item>
        <item>tek2</item>
        <item>tek3</item>
        <item>tek4</item>
        <item>tek5</item>
        <item>none</item>
    </string-array>
    <!-- /TROMBI-->

    <string name="planningAPI">https://epitech-api.herokuapp.com/planning</string>

    <string name="marksAPI">https://epitech-api.herokuapp.com/marks</string>

    <string name="moduleAPI">https://epitech-api.herokuapp.com/modules</string>

    <string name="tokenAPI">https://epitech-api.herokuapp.com/modules</string>

    <!-- Messages -->
    <string name="messagesAPI">https://epitech-api.herokuapp.com/messages</string>
    <string name="message_title">title</string>
    <string name="message_user">user</string>
    <string name="message_teacher_name">title</string>
    <string name="message_content">content</string>
    <string name="message_date">date</string>

    <!-- !Messages -->

    <string name="eventAPI">https://epitech-api.herokuapp.com/event</string>

    <!-- USER -->
    <string name="userAPI">https://epitech-api.herokuapp.com/user</string>
    <string name="login">login</string>
    <string name="fullName">title</string>
    <string name="email">internal_email</string>
    <string name="picture">picture</string>
    <string name="value">value</string>
    <string name="promo">promo</string>
    <string name="gpa">gpa</string>
    <string name="complementary_info">nsstat</string>
    <string name="active_time">active</string>
    <string name="phone">telephone</string>
    <string name="credits">credits</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_groups">groups</string>
    <string name="group_name">name</string>
    <string name="biggpa">GPA</string>
    <string name="bigcredits">Crédits</string>
    <string name="bigactive">Log</string>
    <string name="bigyear">Promo</string>
    <!-- /USER -->

    <!-- Strings related to login Activity-->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!-- /Strings related to login Activity-->

    <!-- Marks -->
    <string name="last_mark_title">Dernières notes :</string>
    <string name="last_grade_title">Derniers grades :</string>
    <string name="marks">notes</string>
    <string name="mark_project_name">title</string>
    <string name="mark_final_mark">final_note</string>
    <string name="mark_project_rater">correcteur</string>
    <!-- /Marks -->

    <!-- Events API -->
    <string name="event_c0">scolaryear</string>
    <string name="event_c1">codemodule</string>
    <string name="event_c2">codeinstance</string>
    <string name="event_c3">codeacti</string>
    <string name="event_c4">codeevent</string>
    <string name="tokencode">tokenvalidationcode</string>


    <!-- GRADES -->
    <string name="modules">modules</string>
    <string name="grade_module_name">title</string>
    <string name="grade_module_grade">grade</string>
    <!-- /GRADES -->

    <string name="prompt_search_by_login">Search by login</string>
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="p1">Modules du semestre courant       </string>
    <string name="p2">Modules où je suis inscrit seulement       </string>
    <string name="p3">Sessions où je suis inscrit seulement       </string>

    <string name="e1">Type</string>
    <string name="e2">Module</string>
    <string name="e3">Description</string>
    <string name="e4">Salle(s)</string>


</resources>
