<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_action_name"
            android:title="@string/My_Profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_research"
            android:title="@string/Search_by_Login" />
        <item
            android:id="@+id/nav_planning"
            android:icon="@drawable/ic_messages"
            android:title="@string/planning" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_trombinoscope"
            android:title="@string/Trombi" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_messages"
            android:title="@string/Last_Messages" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
