<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.discovery.java.tekdroid.Activities.PlanningActivity"
    >

    <TextView
        android:id="@+id/acti_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_below="@id/acti_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/time"
        android:layout_below="@id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/typeVoid"
        android:layout_below="@id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/e1"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/acti_type"
        android:layout_below="@id/typeVoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/moduVoid"
        android:layout_below="@id/acti_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/e2"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/acti_modu"
        android:layout_below="@id/moduVoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/descVoid"
        android:layout_below="@id/acti_modu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/e3"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/acti_desc"
        android:layout_below="@id/descVoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>



    <TextView
        android:id="@+id/roomVoid"
        android:layout_below="@id/acti_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/acti_room"
        android:layout_below="@id/roomVoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/acti_room">

        <EditText
            android:id="@+id/token"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/token"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
